adding new sub-ideologies and a shitload of cosmetic tags
- provisional work for additional subideologies
- cosmetic tags for Siberian Warlords, Turkestan tags, Caucasian Pacification Army, Baltics, Transcaucasia and Ukraine
- Gran Colombia now actually has the subideology of "Bolivarian Democracy"

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -20,7 +20,7 @@
  NI_VARIANT_05_desc:0 "§YRevolutionary Nationalism§! is a combination of Revolutionary Republicanist ideas and ultranationalist doctrine. Birthed during the tumultous interwar years of the French Republic, Revolutionary Nationalism was first described by French thinker Georges Sorel. He argued for taking the revolutionary republicanist aspect of Jacobinism and combining it with a strong, militaristic reactionary state. In recent years, the ideology has been pushed by French Armandists, their titular idealogue being former Jacobin Inessa Armand. "
 
  NI_VARIANT_06:0 "§YNeo-Colonialism§!"
- NI_VARIANT_06_desc:0 "WIP"
+ NI_VARIANT_06_desc:0 "§ONeo-Colonialism§! refers to a particularly ultranationalist variant of imperial colonialism. Rather than merely lording over the colonized groups, Neo-Colonialist regimes seek to actively impose their culture and hierarchy on these foreign groups.\n\nAs an ideology, Neo-Colonialism is a relatively recent invention. The political radicalization of countries like France have created new strains of imperial ideological thought, including Neo-Colonialism. The ideology has primarily gained traction in the Green Sahara colonies, where Europeanization is still maintained in full."
 
  ds:0 "Despotism"
  ds_noun:0 "Despotism"
@@ -67,11 +67,11 @@
  CN_VARIANT_01:0 "§YConservative§!"
  CN_VARIANT_01_desc:0 "§YConservatism§! is a prevalent ideology in many nations, advocating for traditionalism and moderate reforms. Conservatives are often dramatically more moderate than their more reactionary counterparts and are far less hostile to reform. Many advocate for slower, steady reforms rather than the dramatic changes purposed by Liberals and State Socialists. \n\nFavoring a mixture of traditional social roles and free market reforms, conservativism is an almost universally prevalent ideology."
  
- CN_VARIANT_02:0 "§YRight-Wing Populism§!"
- CN_VARIANT_02_desc:0 "WIP"
+ CN_VARIANT_02:0 "§YRight Wing Populism§!"
+ CN_VARIANT_02_desc:0 "§ORight Wing Populism§! is, unsurprisingly, a strain of conservative thought that caters more to the masses. While left wing populism may often emphasize the economic element, right wing populism tends to focus on a mix of cultural preservationism and anti-elitist doctrine.\n\nThe line between progressive conservatism and right wing populism can sometimes become blurred, as in some cases either may adopt economically progressive policies while not necessarily being left wing. In either case, there is a general emphasis on appealing to the common man over national elites."
 
  CN_VARIANT_02:0 "§Progressive Conservatism§!"
- CN_VARIANT_02_desc:0 "WIP"
+ CN_VARIANT_02_desc:0 "§OProgressive Conservatism§! is a relatively old ideology, finding roots in the Enlightenment era. Progressive Conservatism has been a major driving force behind historic reformist movements, most notably the British push to abolish slavery.\n\nIn many cases, Progressive Conservatives push social reforms and economic policies that would traditionally be seen as left wing or liberal, while maintaining some regressive cultural norms. In some cases, this might manifest as a means to undermine socialist support through competitive welfare policies that pull votes from left wing candidates. In other cases, it might be as unremarkable as a party which maintains conservative fiscal policies while pushing social reforms."
 
  cn_drift:0 "Daily drift towards Conservatism"
 
