British Focus Fixes and Flag Flickering
Fixes to the British Focus Tree
Flickering flags are now fixed

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -758,6 +758,7 @@
   ENG_Master_Land:0 "Masters of the Land"  
   ENG_Master_Sea:0 "Masters of the Sea"
   ENG_Master_World:0 "Masters of the Earth"
+  ENG_Irish_Intervention_Timeout:0 "The Irish Secession War"
 
   ENG_Commonwealth_Development_Funding:0 "Commonwealth Development Programme"
   ENG_Commonwealth_Research_Funding:0 "Commonwealth Research Assistance"
