--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -44,6 +44,9 @@
  DS_VARIANT_06:0 "§YAuthoritarian Democracy§!"
  DS_VARIANT_06_desc:0 "§YAuthoritarian Democracy§! is a system of government where democracy is conducted by the ruling elite of an authoritarian state in an effort to represent the varying interests of a society. In most cases, this manifests as a form of managed democracy wherin candidates are managed and approved by the ruling government to prevent the manifestation of any anti-government leadership."
 
+ DS_VARIANT_07:0 "§OBolivarian Democracy§!"
+ DS_VARIANT_07_desc:0 "§OBolivarian Democracy§!"
+
  ds_drift:0 "Daily drift towards Despotism"
 
  rc:0 "Reactionaries"
