Interservice Rivarly Fix

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -105,7 +105,7 @@
   FRA_military_gov_tt:0 "National Spirits from the previous administration will be removed"
 
   FRA_SP_IN_POWER:0 "The SP are in power"
-  FRA_SP_IN_POWER:0 "The Military are in power"
+  FRA_MIL_IN_POWER:0 "The Military are in power"
   FRA_DISABLE_ALL_MECHANICS:0 "The Interservice Rivarly has come to an end"
 
   ##########################
