--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -67,14 +67,17 @@
  cn_noun:0 "Conservatives"
  cn_desc:0 "Representative State"
 
- CN_VARIANT_01:0 "§YConservative§!"
+ CN_VARIANT_01:0 "§OConservative§!"
  CN_VARIANT_01_desc:0 "§YConservatism§! is a prevalent ideology in many nations, advocating for traditionalism and moderate reforms. Conservatives are often dramatically more moderate than their more reactionary counterparts and are far less hostile to reform. Many advocate for slower, steady reforms rather than the dramatic changes purposed by Liberals and State Socialists. \n\nFavoring a mixture of traditional social roles and free market reforms, conservativism is an almost universally prevalent ideology."
  
- CN_VARIANT_02:0 "§YRight Wing Populism§!"
+ CN_VARIANT_02:0 "§ORight Wing Populism§!"
  CN_VARIANT_02_desc:0 "§ORight Wing Populism§! is, unsurprisingly, a strain of conservative thought that caters more to the masses. While left wing populism may often emphasize the economic element, right wing populism tends to focus on a mix of cultural preservationism and anti-elitist doctrine.\n\nThe line between progressive conservatism and right wing populism can sometimes become blurred, as in some cases either may adopt economically progressive policies while not necessarily being left wing. In either case, there is a general emphasis on appealing to the common man over national elites."
 
- CN_VARIANT_02:0 "§Progressive Conservatism§!"
- CN_VARIANT_02_desc:0 "§OProgressive Conservatism§! is a relatively old ideology, finding roots in the Enlightenment era. Progressive Conservatism has been a major driving force behind historic reformist movements, most notably the British push to abolish slavery.\n\nIn many cases, Progressive Conservatives push social reforms and economic policies that would traditionally be seen as left wing or liberal, while maintaining some regressive cultural norms. In some cases, this might manifest as a means to undermine socialist support through competitive welfare policies that pull votes from left wing candidates. In other cases, it might be as unremarkable as a party which maintains conservative fiscal policies while pushing social reforms."
+ CN_VARIANT_03:0 "§OProgressive Conservatism§!"
+ CN_VARIANT_03_desc:0 "§OProgressive Conservatism§! is a relatively old ideology, finding roots in the Enlightenment era. Progressive Conservatism has been a major driving force behind historic reformist movements, most notably the British push to abolish slavery.\n\nIn many cases, Progressive Conservatives push social reforms and economic policies that would traditionally be seen as left wing or liberal, while maintaining some regressive cultural norms. In some cases, this might manifest as a means to undermine socialist support through competitive welfare policies that pull votes from left wing candidates. In other cases, it might be as unremarkable as a party which maintains conservative fiscal policies while pushing social reforms."
+
+ CN_VARIANT_04:0 "§ODominant Party Democracy§!"
+ CN_VARIANT_04_desc:0 "§ODominant Party Democracy§!"
 
  cn_drift:0 "Daily drift towards Conservatism"
 
