Giving Forgotten Nations Policies

--- a/localisation/english/PB_Maratha_l_english.yml
+++ b/localisation/english/PB_Maratha_l_english.yml
@@ -61,12 +61,12 @@ MAR_GWALIOR_cn:0 "Gwalior Empire"
 MAR_GWALIOR_lb:0 "Gwalior Empire" 
 MAR_GWALIOR_an:0 "Gwalior Empire" 
 
-MAR_ds_party_long:0 "Scindai Dynasty (Absolutist Faction)"
-MAR_ds_party:0 "Scindai"
-MAR_ni_party_long:0 "Scindai Dynasty (Expansionist Faction)"
-MAR_ni_party:0 "Scindai"
-MAR_cn_party_long:0 "Scindai Dynasty (Constitutionalist Faction)"
-MAR_cn_party:0 "Scindai"
+MAR_ds_party_long:0 "Scindia Dynasty (Absolutist Faction)"
+MAR_ds_party:0 "Scindia"
+MAR_ni_party_long:0 "Scindia Dynasty (Expansionist Faction)"
+MAR_ni_party:0 "Scindia"
+MAR_cn_party_long:0 "Scindia Dynasty (Constitutionalist Faction)"
+MAR_cn_party:0 "Scindia"
 MAR_lb_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
 MAR_lb_party:0 "ABK/PIC"
 MAR_ss_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
