--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -584,6 +584,66 @@
   WLA_ni_party:0 "FPF(W)"
   WLA_ni_party_long:0 "Front Populaire Français (Wallonie)"
   
+  DEN_jc_party:0 "Republikaner"
+  DEN_jc_party_long:0 "Republikanernes Parti"
+  DEN_ss_party:0 "SF"
+  DEN_ss_party_long:0 "Socialdemokratisk Forbund"
+  DEN_lb_party:0 "Venstre-Landmanspartiet"
+  DEN_lb_party_long:0 "VLP"
+  DEN_cn_party:0 "Venstre-Landmanspartiet"
+  DEN_cn_party_long:0 "VLP"
+  DEN_an_party:0 "Retsforbundet"
+  DEN_an_party_long:0 "Retsforbundet"
+  DEN_rc_party:0 "KIP"
+  DEN_rc_party_long:0 "Kristeligt Interesseparti"
+  DEN_ds_party:0 "Lyksborg"
+  DEN_ds_party_long:0 "House of Lyksborg" 
+  DEN_ni_party:0 "-"
+  DEN_ni_party_long:0 "-"
+
+  NOR_jc_party:0 "NUa"
+  NOR_jc_party_long:0 "Nasjonal Uavhengighetsallianse"
+  NOR_ss_party:0 "SF"
+  NOR_ss_party_long:0 "Socialdemokratisk Forbund"
+  NOR_lb_party:0 "Venstre-Landmanspartiet"
+  NOR_lb_party_long:0 "VLP"
+  NOR_cn_party:0 "Venstre-Landmanspartiet"
+  NOR_cn_party_long:0 "VLP"
+  NOR_an_party:0 "-"
+  NOR_an_party_long:0 "-"
+  NOR_rc_party:0 "NUa"
+  NOR_rc_party_long:0 "Nasjonal Uavhengighetsallianse"
+  NOR_ds_party:0 "Lyksborg"
+  NOR_ds_party_long:0 "House of Lyksborg" 
+  NOR_ni_party:0 "NUa"
+  NOR_ni_party_long:0 "Nasjonal Uavhengighetsallianse"
+
+  SER_ds_party:0 "Karađorđević"
+  SER_ds_party_long:0 "House of Karađorđević" 
+
+  AFG_ds_party:0 "Musahiban"
+  AFG_ds_party_long:0 "House of Musahiban"
+  AFG_rc_party:0 "Musahiban"
+  AFG_rc_party_long:0 "House of Musahiban"
+  AFG_ni_party:0 "Musahiban"
+  AFG_ni_party_long:0 "House of Musahiban"
+
+  SWI_jc_party:0 "SP"
+  SWI_jc_party_long:0 "Staatssozialistische Partei der Schweiz"
+  SWI_ss_party:0 "SP"
+  SWI_ss_party_long:0 "Staatssozialistische Partei der Schweiz"
+  SWI_lb_party:0 "FDP"
+  SWI_lb_party_long:0 "Freisinnig-Demokratische Partei"
+  SWI_an_party:0 "FDP"
+  SWI_an_party_long:0 "Freisinnig-Demokratische Partei"
+  SWI_cn_party:0 "CVP"
+  SWI_cn_party_long:0 "Christlichdemokratische Volkspartei"
+  SWI_ni_party:0 "Union Nationale"
+  SWI_ni_party_long:0 "UN"
+  SWI_ds_party:0 "Nationale Front"
+  SWI_ds_party_long:0 "NF"
+  SWI_rc_party:0 "-"
+
  ############
  # POLITICAL PARTY TEMPLATE 
  ############
