Some culture work for Germany

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -10,14 +10,29 @@ PB_Culture_Scottish_tt:0 "Scottish"
 PB_Culture_Welsh_tt:0 "Welsh"
 PB_Culture_Ulster_tt:0 "Ulster-Scots"
 PB_Culture_Irish_tt:0 "Irish"
+
+# FRANCE #
+
 PB_Culture_Breton_tt:0 "Breton"
 PB_Culture_French_tt:0 "French"
 PB_Culture_Occitan_tt:0 "Occitan"
 PB_Culture_Corsican_tt:0 "Corsican"
 PB_Culture_Pied_Noir_tt:0 "Pied-Noir"
+
+# LOWLANDS #
 PB_Culture_Dutch_tt:0 "Dutch"
 PB_Culture_Flemish_tt:0 "Flemish"
 PB_Culture_Wallonian_tt:0 "Wallonian"
+
+# GERMANY #
+
+PB_Culture_Brandenburg_Prussian_tt:0 "West-Prussian"
+PB_Culture_East_Prussian_tt:0 "East-Prussian"
+PB_Culture_Hanoverian_tt:0 "Hanoverian"
+PB_Culture_Rhenish_tt:0 "Rhenish"
+PB_Culture_Saxon_tt:0 "Saxon"
+PB_Culture_Southern_German_tt:0 "South-German"
+PB_Culture_Swiss_tt:0 "Swiss"
 
 ## -------- Expanded Lore -------- ##
 
@@ -45,6 +60,16 @@ PB_Culture_Pied_Noir_tt_delayed:0 ""
 PB_Culture_Dutch_tt_delayed:0 ""
 PB_Culture_Flemish_Lore_tt_delayed:0 ""
 PB_Culture_Wallonian_tt_delayed:0 ""
+
+# GERMANY #
+
+PB_Culture_Brandenburg_Prussian_tt_delayed:0 ""
+PB_Culture_East_Prussian_tt_delayed:0 ""
+PB_Culture_Hanoverian_tt_delayed:0 ""
+PB_Culture_Rhenish_tt_delayed:0 ""
+PB_Culture_Saxon_tt_delayed:0 ""
+PB_Culture_Southern_German_tt_delayed:0 ""
+PB_Culture_Swiss_tt_delayed:0 ""
 
 # IBERIA #
 
