Balkan culture work

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -72,6 +72,12 @@ PB_Culture_Andalusian_tt:0 "Andalusian"
 PB_Culture_Hellenic_tt:0 "Hellenic"
 PB_Culture_Albanian_tt:0 "Albanian"
 PB_Culture_Slovenian_tt:0 "Slovenian"
+PB_Culture_Macedonian_tt:0 "Macedonian"
+PB_Culture_Serbian_tt:0 "Serbian"
+PB_Culture_Croatian_tt:0 "Croatian"
+PB_Culture_Dalmatian_tt:0 "Dalmatian"
+PB_Culture_Bosnian_tt:0 "Bosnian"
+PB_Culture_Montenegrin_tt:0 "Montenegrin"
 
 
 ## -------- Expanded Lore -------- ##
@@ -148,3 +154,9 @@ PB_Culture_Andalusian_tt_delayed:0 ""
 PB_Culture_Hellenic_tt_delayed:0 ""
 PB_Culture_Albanian_tt_delayed:0 ""
 PB_Culture_Slovenian_tt_delayed:0 ""
+PB_Culture_Macedonian_tt_delayed:0 "Macedonian"
+PB_Culture_Serbian_tt_delayed:0 "Serbian"
+PB_Culture_Croatian_tt_delayed:0 "Croatian"
+PB_Culture_Dalmatian_tt_delayed:0 "Dalmatian"
+PB_Culture_Bosnian_tt_delayed:0 "Bosnian"
+PB_Culture_Montenegrin_tt_delayed:0 "Montenegrin"
