New Loadscreens and Peace Popup Fix

--- a/localisation/english/PB_War_Outcome_Events_l_english.yml
+++ b/localisation/english/PB_War_Outcome_Events_l_english.yml
@@ -25,6 +25,7 @@ waroutcome.5.c:0 "Francia delenda est"
 waroutcome.17.t:0 "The Tonkin Campaign Stalemate"
 waroutcome.17.d:0 "It seems we have been unable to break the lines of the North Vietnamese army, and they are also unable to break our lines. Thus it is clear we can no longer continue our campaign into the North Vietnamese territory, and will have to leave them be as to not put to much strain on our finances because of the war. You win this round North Vietnam."
 waroutcome.17.a:0 "Withdrawal our troops and sign a peace treaty."
+waroutcome.17.b:0 "We will not abandon Vietnam"
 
 waroutcome.7.t:0 "Russia sues for Peace" #Why is there two of these?
 waroutcome.7.d:0 "The Russian giant has come hurdling to the ground by the might of our armies, now its begs for our mercy. The immediate demands we plan on putting forwar is the direct transfer of the major Russian cities of St. Petersburg, Moscow, and Tsaritsyn. The rest of the nitty-gritty details are still being worked out on by League officials however Russia knows damn well that its time as an empire is coming to an end."
@@ -44,7 +45,7 @@ waroutcome.13.a:0 "Day by day the Pacte becomes weaker"
 
 waroutcome.15.t:0 "The Future of Spain"
 waroutcome.15.d:0 "With victory over the Spanish crusader state, it has become clear to our administrators that Spain has suffered the last few decades for want of a sovereign. Obviously the Bourbon dynasty which ruled before the Great War is out of consideration, which naturally leaves two obvious solutions. We can install a monarch from the British house of Saxe-Coburg and Gotha, or we can install a monarch from the House of Habsburg.\n\nBoth bring with them the natural political inclinations of their home country, with the Windsorite proposal citing the need for Spanish autonomism in the same model as the Imperial Confederation. The Habsburg proposal is more conservative, arguing for a federative Spanish kingdom with limited autonomy for the country's minority regions. The natural historical implications of returning Spain to the bosom of Vienna is fairly obvious, of course.\n\nRegardless of the decision, the League has a golden opportunity to capitalize on Spain's weariness to create a compliant nation and establish control over a critical instrument in rebuilding the European concert."
-waroutcome.15.a:0 "Spain shall be ruled by the Windsors"
+waroutcome.15.a:0 "Spain shall be ruled by Saxe-Coburg and Gotha"
 waroutcome.15.b:0 "Spain shall once more be under the Habsburgs"
 
 waroutcome.16.t:0 "Withdrawing from the Philippines"
