--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -78,6 +78,16 @@ PB_Culture_Croatian_tt:0 "Croatian"
 PB_Culture_Dalmatian_tt:0 "Dalmatian"
 PB_Culture_Bosnian_tt:0 "Bosnian"
 PB_Culture_Montenegrin_tt:0 "Montenegrin"
+PB_Culture_Bulgarian_tt:0 "Bulgarian"
+PB_Culture_Romanian_tt:0 "Romanian"
+PB_Culture_Hungarian_tt:0 "Hungarian" 
+PB_Culture_Slovakian_tt:0 "Slovakian" 
+PB_Culture_Ruthenian_tt:0 "Ruthenian" 
+
+# ASIA-MINOR #
+
+PB_Culture_Turkish_tt:0 "Turkish" 
+PB_Culture_Stamboul_tt:0 "Stamboul" 
 
 
 ## -------- Expanded Lore -------- ##
@@ -160,3 +170,13 @@ PB_Culture_Croatian_tt_delayed:0 "Croatian"
 PB_Culture_Dalmatian_tt_delayed:0 "Dalmatian"
 PB_Culture_Bosnian_tt_delayed:0 "Bosnian"
 PB_Culture_Montenegrin_tt_delayed:0 "Montenegrin"
+PB_Culture_Bulgarian_tt_delayed:0 "Bulgarian"
+PB_Culture_Romanian_tt_delayed:0 "Romanian"
+PB_Culture_Hungarian_tt_delayed:0 "Hungarian" 
+PB_Culture_Slovakian_tt_delayed:0 "Slovakian" 
+PB_Culture_Ruthenian_tt_delayed:0 "Ruthenian" 
+
+# ASIA-MINOR #
+
+PB_Culture_Turkish_tt_delayed:0 "Turkish" 
+PB_Culture_Stamboul_tt_delayed:0 "Stamboul" 
