Military Progress Mapmode

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -746,6 +746,10 @@
   PBNews.189.d:0 "Facing the defeat of their Chinese allies, the government of Japan has buckled and proposed a ceasefire with the Russian Empire. The Tokyo Peace Accords, signed between representatives of the Russian Empire and Japan, have functionally surrendered the Asian mainland to Russian forces.\n\nChina now faces a future under Russian oversight, while Japan now finds itself once more isolated and defeated. Asia's future under Russian rule seems bleak at best."
   PBNews.189.a:0 "The Rising Sun, humbled yet again."
 
+  PBNews.190.t:0 "NO STRAIGHT BANANAS!"
+  PBNews.190.d:0 "The straight banana, that quintessential British fruit created in the '10s as a succesful attempt at bio-engineering a more resilient variant, has become increasingly scarce over the course of the war. Across the Empire, shops have signaled this scarcity of straight bananas with signs. \n\nThe scarcity of straight bananas is another direct impact of the war on the continent on the British people, as the importing of the luxurious yellow snack becomes difficult with French submarines terrorising merchant fleets. For now, the British public will have to replace their bananas with more plentiful options, like oranges."
+  PBNews.190.a:0 "By George, no more straight bananas?"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
