Updated equipment loc and nations that still missed laws

--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -216,6 +216,10 @@
  quadropod_automat_2:0 "Quadropod III"
  quadropod_automat_2_desc:0 ""
 
+ infantry_rations_equipment_desc:0 "Standard Rationing to keep our soldiers fed in the field."
+
+ motorized_equipment_desc:0 "Motorised Vehicles, used in combat situations, that help our soldiers move quicker."
+
  ENG_infantry_equipment_0:0 "Standard Infantry Rifle 1918 Pattern"
  ENG_infantry_equipment_0_short:0 "S.I.R Pattern 1918"
 
