Conference of Europe Part 2

--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
   PB_CoE_Conference_of_Europe:0 "The Conference of Europe"
-  PB_CoE_Conference_of_Europe_desc:0 "\n\n\n\n\n\nThe second war that has decimated Europe in 20 years has finally come to an end. Cities now resemble smoldering graveyards, while entire villages have been wiped off the map, either due to national projects of achieving \"natural populations\" or due to the hellish machines and innovations unleashed upon the continent during the war. Roads and railways are broken and beyond repair, while industrious factories now seem abandoned. \n\nWith the powers that challenged the status quo now destroyed, Britain, Germany and their allies now seek to partition the pie correctly. It remains to be seen how possible that will be, as some seek revenge for the devestation or national humiliation, while others seek to bring unity to a divided Europe. \n\nCurrent Topic of the Conferece: [Coe_get_topic] \n\nCurrent Proposal: [Coe_get_proposal] \n\nCurrent additions to the proposal: \n[Coe_get_changes1] \n[Coe_get_changes2] \n[Coe_get_changes3] \n[Coe_get_changes4] \n\nCurrent chance of §Gapproval§! of the proposal:"
+  PB_CoE_Conference_of_Europe_desc:0 "\n\n\n\n\n\nThe second war that has decimated Europe in 20 years has finally come to an end. Cities now resemble smoldering graveyards, while entire villages have been wiped off the map, either due to national projects of achieving \"natural populations\" or due to the hellish machines and innovations unleashed upon the continent during the war. Roads and railways are broken and beyond repair, while industrious factories now seem abandoned. \n\nWith the powers that challenged the status quo now destroyed, Britain, Germany and their allies now seek to partition the pie correctly. It remains to be seen how possible that will be, as some seek revenge for the devestation or national humiliation, while others seek to bring unity to a divided Europe. \n\nCurrent Topic of the Conferece: [Coe_get_topic] \n\nCurrent Proposal: [Coe_get_proposal] \n\nCurrent additions to the proposal: [Coe_get_changes1] [Coe_get_changes2] [Coe_get_changes3] [Coe_get_changes4] [Coe_get_changes5]\n\nCurrent chance of §Gapproval§! of the proposal:"
   PB_CoE_Add_A_Demilitarization_Clause:0 "Add Extensive Demilitarisation Clause"
   PB_CoE_Add_A_Demilitarization_Clause_desc:0 "To placate the German diplomats, we may introduce an extensive plan to demilitarise the French state to the Dexter Plan. This will hinder French capabilities to build autopods, tanks, artillery, bio-genetic weaponry, airplanes and any military-grade ship or submarine. While it may prove to be the hand the Germans needed to approve of this plan, it would seriously neuter a friendly French military in the forseeable future."
   PB_CoE_Allow_Lorraine_Occupation:0 "Allow Lorraine Occupation"
@@ -10,6 +10,16 @@
   PB_CoE_A_Jewish_Homeland_desc:0 "The Jewish people have suffered immensely under the French regime, seeing insane forms of persecution. While a rather unorthodox proposal, a few German diplomats have proposed to grant the Jewish people a part of France as repayment for the unethical and immoral projects targetting French jews of the former French government."
   PB_CoE_GER_choose_place_for_israel:0 "Pick [FROM.GetName] as Jewish Homeland"
   PB_CoE_GER_choose_place_for_israel_desc:0 "Coastal, a nice climate and small: this territory is the perfect homeland for the Jewish people!"
+  PB_CoE_Divide_the_Regions:0 "Discuss Spheres of Influence"
+  PB_CoE_Divide_the_Regions_desc:0 "While our proposal may initially be unappealing to the British delegation, perhaps we can smoothen the tension with a little dividing and conquering? The establishment of new states in France allows all debating parties to carve up a small sphere of influence in the region. Perhaps by giving the Brits a piece of the pie, they may be less hesitant to support the Schwarz proposal?"
+  PB_CoE_Implement_Full_Deindustrialisation:0 "Fully Implement Schwarz's Vision"
+  PB_CoE_Implement_Full_Deindustrialisation_desc:0 "Schwarz, in his essay on France, draws an interesting picture of how Germany could completely dominate France for the next thousand years. Calling it \"turning back the clock\", this euphemistic phrase describes the systematic destruction of France's industrial capabilities, ranging from civilian production to the extraction of heavy resources. Through total deindustrialisation, France can be tied to a German market and remain subservient for the next decade to come."
+  PB_CoE_Brittany_as_Bribe:0 "The Brittany Deal"
+  PB_CoE_Brittany_as_Bribe_desc:0 "With the British still not convinced of the Schwarz Proposal, a perhaps drastic measure has to be used. In the closed rooms of Palace Het Loo, a deal can be made between Britain and Germany that gives the Brits the liberty to integrate Brittany into their sphere. While it doesn't befit our diplomatic image to throw a previous ally to the sharks, we have no other option (at least, not an option we are willing to take)."
+  PB_CoE_Take_Lorraine_Region:0 "Watch beyond Elsass"
+  PB_CoE_Take_Lorraine_Region_desc:0 "We are the victors of the second Great War and, as the saying goes, to the victor goes the spoils! Lorraine and Franche-Comté are exactly the kind of spoils we desire, so we will take the opportunity to seize the regions from a potential Burgundian state, when our proposal is agreed upon."
+  PB_CoE_The_Rest_of_Papua:0 "North Papua for Approval"
+  PB_CoE_The_Rest_of_Papua_desc:0 "The situation has become beyond tense in Het Loo, as the Brits still aren't that on board with our Schwarz proposal. With even our most veteran diplomats unsure of the British response, the idea has been opted to basically bribe the British with the rest of the island of Papua, exchanging it for guaranteed approval for the Schwarz proposal."
 
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
@@ -18,11 +28,18 @@
 
   Coe_no_current_proposal:0 "§gNo Current Proposal§!"
   Coe_get_proposal_dexter:0 "§YDexter Plan§! \n\nFrance's pre-war borders will be restored, with the exception of Pas de Calais going to Wallonia [WLA.GetFlag]. French industry will be directly divided and watched over by the main members of the League of Nations."
+  Coe_get_proposal_schwarz:0 "§YSchwarz Proposal§! \n\nPre-war France will lose Pas de Calais to Wallonia [WLA.GetFlag]and will be divided into its four fundamental regions: Occitania [OCT.GetFlag], Burgundy [BRG.GetFlag], Normandy [NRM.GetFlag] and the Seine Region."
 
   Coe_no_current_changes:0 ""
-  Coe_get_changes_lorraine:0 "- Continued German [GER.GetFlag]occupation of Lorraine"
-  Coe_get_changes_demilitarisation:0 "- Extensive demilitarisation of the French state"
-  Coe_get_changes_israel:0 "- The establishment of Israel [ISR.GetFlag] on French soil"
+  Coe_get_changes_lorraine:0 "\n- Continued German [GER.GetFlag]occupation of Lorraine"
+  Coe_get_changes_demilitarisation:0 "\n- Extensive demilitarisation of the French state"
+  Coe_get_changes_israel:0 "\n- The establishment of Israel [ISR.GetFlag] on French soil"
+  Coe_get_changes_schwarz_divide:0 "\n- The new states will be divided among the victors"
+  Coe_get_changes_schwarz_brittany:0 "\n- Brittany [BRT.GetFlag]will be part of the British sphere of influence"
+  Coe_get_changes_schwarz_papua:0 "\n- North Papua will be transfered over to Victoria [VIC.GetFlag]"
+  Coe_get_changes_schwarz_lorraine:0 "\n- Germany [GER.GetFlag] will maintain its occupation of Lorraine and Franche-Comté"
+  Coe_get_changes_schwarz_vision:0 "\n- A German-led committee will oversee the complete deindustrialisation of former French territory"
+
 
   PB_COE_PROPOSAL_DEXTER:0 "The \"§YDexter Plan§!\" is currently discussed."
   COE_ISRAEL_IN_FRANCE:0 "A state has been picked for a Jewish homeland"
@@ -42,6 +59,10 @@
   COE.2.t:0 "Conference of Europe: The Dexter Plan"
   COE.2.d:0 "Drawn up and proposed by famed Commonwealth economists Harry Dexter White and Henry Morgenthau, the Dexter Plan reeks of British influence. Proposing to minimize the partition of France, the Dexter Plan draws up a map of the pre-expansion borders of France, excluding the region around Dunkerque, which is given to Wallonian state. The plan further details several industrial occupation zones across the country, mainly meant to keep France's heavy industrial capabilities under the watchful eyes of the League of Nations. \n\nWhile a subtle and highly technical plan that promises peace on the continent, the German diplomats have been far less enthusiastic about the proposed plan than their British counterparts. Perhaps the plan can use some revision, but it is currently the proposal we put on the table."
   COE.2.a:0 "Let the vote begin..."
+
+  COE.5.t:0 "Conference of Europe: The Schwarz Proposal"
+  COE.5.d:0 "Out of nowhere, the German delegation has backed a proposal written by German bureaucrat Franz Xaver Schwarz, deemed so radical that it has even taken the Turkish delegation aback. Schwarz is a known German ideologue, famed for his intellectual argumentation of anti-French sentiment. Using history and culture, Schwarz argues that the French have been a nation of expansionism since its inception and that it has to cease existing for peace in Europe to be viable. \n\nThe proposal pictures an Europe without France. The country is instead divided into its \"medieval\" parts, dividing the country among a Republic of the Seine, a Burgundian Kingdom, a Normandian state and a Southern Occitania. While Schwarz himself has gone even further, advocating for complete deindustrialisation and \"turning the clock back in France\", German diplomats still know how to be diplomatic and have thus kept those ideas out of the final draft. Still, the concept to the British delegation seems beyond unreasonable."
+  COE.5.a:0 "Let the vote begin..."
 
   COEDEX.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEX.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
